@@ -18,3 +18,6 @@ have been computed yet.  Of course, we have to wait for it if it
 ends up being printed.
 
 Now warn of dangers of -O3 in R-admin.
+
+Bug and documentation fixes for 'apply' and 'rank'.
+
